framework/versions/1.3.0/REVIEW_CHECKLIST.md
# 审核清单 v1.3.0

本清单由任何承担审核职责的角色使用，最常见的是专业分管，不专属于独立审核会话。执行会话可以据此自检，但不能批准自己的产出。

审核结论只有：`APPROVED`、`CHANGES_REQUESTED`、`BLOCKED`。审核人必须独立读取任务卡、权威资料和实际差异，不把作者总结当作证据。

## 1. 先确定审核场景

- 场景 A：审计现有对象，没有预设修改。先定性、完整阅读，再检查和提出任务。
- 场景 B：审核刚完成的修改。确认改前准备证据，然后从实际差异和验证开始。

如果审核人需要做实质修改，本轮不能继续担任唯一最终审核人。

## 2. 风险四维与检查深度

逐项评估：

1. 影响范围：单文件 / 单模块 / 跨模块 / 全局或跨域。
2. 行为复杂度：纯数据 / 简单逻辑 / 生命周期 / 复杂状态机。
3. 依赖数量：无消费者 / 少量直接调用 / 多模块公共契约。
4. 可观察性：直接可见 / 测试可见 / 只能间接或文档对照。

分级：

- 轻型：四维均低，无行为合同或持久状态变化。做输入核实、文件完整性、数值/统一性、专项验证和 diff 审核。
- 中型：任一维中等。增加影响分析、pre-mortem、相关方案项、行为声明清单、四层文档或六层代码验证。
- 重型：跨域/全局、复杂状态机、公共契约、持久状态、核心循环、平台/runtime 迁移、账号/AppID、上传/提审/发布或难观察。完整执行本清单、选 3–5 个评审视角，并经过规定阶段门。

不得只按文件数/行数降级。审核开始时把等级和理由写入任务卡。

## 3. Pre-mortem

中/重型任务先回答：“假设上线后出现严重问题，最可能的三个原因是什么？”每个原因必须对应一个实际检查、测试或运行观察，不能只列风险名称。

## 4. 审核输入与所有权

- 任务目标、非目标、完成标准和当前状态是否明确。
- 唯一长期owner是否同时是唯一调度者；执行者、审核人、Git收口者是否明确且没有双owner、自批或多头指令。
- exact/contingency/forbidden所有权是否精确；producer、direct consumer、tests、runner/manifest、docs与contingency closure是否在写前核对；其他staged/unstaged改动是否隔离。
- 外部动作是否逐项授权；下载、安装、协议、登录/绑定、AppID、设备、上传、提审和发布不得互相推定。
- 权威文档、实际代码、测试、运行环境和当前 HEAD 是否已核实。
- 变更前行为、目标行为和明确不改变的相邻行为是否可陈述。
- 作者是否列出实际命令/结果、失败项、未验证项、额外发现和影响范围变化。
- 执行载体、资源和回传对象是否与任务跨度、等待、返工及独立性要求匹配；临时角色是否未继承旧任务权限。
- 若使用`WARM_TASK_REBIND`：同一会话的角色、项目/Framework身份与已知内容基线是否可证明；新任务卡、变化权威、current/热索引、actual、HEAD/index、其他owner/保护边界和重新授权是否已核对；冲突时是否升级`FULL_COLD_RECOVERY`。
- 若任务卡授权直接审核闭环：指定审核者是否未参与候选设计/实质写入；exact、允许返工、消息机制、轮次上限、升级停止线和最终owner回传是否齐全；Review开始阶段通知是否只由执行者发送一次，固定对象发送后执行者是否立即停写且不等待ACK；审核者是否默认用第一条实质回复兼作ACK，并只在不能立即开始、需显式异步交接或identity/manifest、范围、独立性、权限异常时向执行者单发一次条件式ACK或阻断；notifier是否准确表示向owner通知的角色，且`NONE`只用于停止线/range gate后current/next均为owner的owner-mediated冻结与委派；唯一owner、审核独立性、Git/阶段/外部权限是否未转移。
- 新建或实质修改的任务卡是否由AI内部通过`scripts/check-task-card.ps1`；唯一机械摘要的`current_exact`是否为正整数且等于expected集合数量，历史正文exact是否未被当作current输入；expected/actual是否为规范化具体路径集合而非计数，AI是否从git status/diff或manifest独立取得本任务actual并以`-ObservedActualPath`逐卡传入；`ACTIVE_WRITE`的actual是否为expected已知子集，`REVIEW/ACTIVE/CLOSED`是否完全相等，missing/extra是否稳定可定位；legacy无摘要是否只标`LEGACY_UNCHECKED`而未引发全量迁移。
- 跨域目标是否默认单父卡；每张独立领域卡是否有可证明必要性、父卡consumer和退出/归档条件；该结构是否未削弱领域owner和必要独立审核。
- Review输入是否冻结稳定内容对象/section identity、candidate与依赖manifest、验证上限；任务卡可变区是否与内容区可区分，避免把纯状态落账误判为整包内容漂移。

输入不足时结论为 `BLOCKED`，不能用猜测补齐。

## 5. 十二项方案审核

每项输出“通过 / 有问题 / 不适用”以及本任务证据：

1. 核心原则与体验：是否服务项目目标；游戏机制是否有可解释的玩家/世界对应。
2. 整体架构：是否符合分层和依赖方向；无循环、跨层越权或重复职责。
3. 单一真相与所有权：同一事实、状态、配置和行为是否只有一个权威/写入者。
4. 简洁性：是否用最少状态和路径解决问题，避免为少量特例扩大复杂度。
5. 扩展性：增加同类类型是否主要通过配置/扩展点，而非多处复制分支。
6. 隐藏耦合：字段、事件或接口变化是否传播到未显式声明的消费者。
7. 过度设计：当前没有真实消费者/验证价值的抽象、状态和兼容层是否被引入。
8. 时间与持续状态：能否用时间戳/事件派生，避免易漂移的逐帧累计；例外需说明。
9. 统一性：同类命令、错误、公式、标记、枚举、命名和数据形状是否走同一机制。
10. 整体自洽：新旧内容有无重叠/冲突；命名、归属、数据流和结构模式是否一致。
11. 方法与模块职责：抽象层次、SRP、CQS、命名-方法体、拆分深度是否合理。
12. 持久字段必要性：消费者、跨 tick 理由、派生/瞬态替代、写入/更新/清除/销毁是否明确。

方案审核查“设计本身是否正确”，不能被文档写得漂亮或测试变绿替代。

## 6. 文档审核八维度

1. 最新设计：是否残留废弃概念或设计漂移。
2. 模块归属：内容是否位于正确层级；设计、规则、接口、数据、流程不越位。
3. 上下游一致：字段、方法、枚举、数值、配置、章节引用和模板实例是否一致。
4. 内容完整：该文档定位需要的接口、字段、失败路径、边界和限制是否齐全。
5. 生命周期闭环：创建、进入、执行、暂停/取消、中断、完成、清理和恢复是否覆盖。
6. 数据流正确：谁写、谁读、何时写、是否多人写/无人读/无人写。
7. 结构与格式：编号、标题、表格、链接、代码围栏、空行、编码、结尾和截断。
8. 冲突：文内、跨文档、设计与实现之间是否存在互斥声明。

## 7. 文档四层机械验证

1. 文件完整性：严格 UTF-8、U+FFFD、NUL、异常尾部、意外截断、围栏/注释配对、尾随空白、链接和 `git diff --check`；新建/实质修改任务卡另核对一致性检查器的稳定结果。
2. 旧概念清除：用 `rg` 搜索概念实际扩散的全部当前有效范围；说明性历史文本需明确排除。
3. 新概念一致：用 `rg` 核实定义、引用、模板、映射和示例到位且同名同义。
4. 重点穿透：重新读取改动/重点章节，用真实场景走通跨文档引用、数据流和生命周期。

场景 A 在建立注意力地图后完整阅读审核对象；场景 B 必须确认作者在改前已完整理解相关对象，并重新阅读改动及上下游。

## 8. 代码六层验证

### L1 语法与静态检查

运行适合语言/项目的语法、类型、lint 或编译检查。工具不适用时说明原因，不能伪造通过。

### L2 文件完整性与差异卫生

检查严格编码、NUL、异常尾部、截断、生成文件边界、行尾和 `git diff --check`；阅读实际 diff，核对命中位置和数量。

### L3 旧概念清除

搜索删除/改名的接口、字段、错误码、魔法字符串、临时引用和兼容入口。范围跟随真实依赖扩散。

### L4 新概念到位与直接覆盖

搜索新入口、消费者、错误/边界路径和清理路径；运行直接单元/集成测试。新模块必须有新行为的直接覆盖，已有测试通过不能代替。

### L5 代码—设计行为一致

复读改动函数/模块，核对输入输出、状态所有权、数据流、调用顺序、错误路径和相邻行为。按第 11 节逐条验证行为声明。

### L6 代码质量

逐项检查：

1. 热路径分配与 GC：循环/每帧/每实体的临时对象、数组、高阶函数和闭包。
2. 死代码与占位：未使用 import/变量/函数、注释代码、TODO、null 占位、计算后无人消费。
3. 命名语义：与项目统一语言一致，缩写可理解。
4. 风格与契约：同类模块导出、错误、数据形状、调用模式统一。
5. 简洁性：重复、深嵌套、复杂条件和第二套实现路径。
6. 魔法值：枚举/配置是否使用单一权威；项目若允许字面量例外需有规则。
7. 前提与断言：关键初始化、状态转换、参数和不变量是否可尽早暴露错误。
8. 职责：抽象层次、SRP、CQS、命名与方法体一致。
9. 复杂度：采用项目阈值；无项目阈值时对深嵌套、高分支、长热路径和过多参数给出证据化判断，不机械制造数字门禁。
10. 拆分质量：helper 是否有独立语义，避免浅方法和为拆分产生的新分配/耦合。

随后运行任务卡要求的全量回归、构建、性能、浏览器、视觉或长跑验证。构建不能替代运行时；截图不能替代交互；测试不能替代设计审核。重型证据可按任务声明的有效键复用，但审核者必须确认对象、依赖、fixture、工具链、环境和命令未漂移；不能证明等价时重跑受影响层。

候选发生变化时先核对delta：内容、依赖、范围、权限或公共合同变化必须重审受影响层；纯机械状态/审核记录或可证明known-exact变化只刷新变化对象。影响面或manifest漂移无法证明时执行完整相关审核；不得用“机械变化”标签覆盖实质语义。

## 9. 平台/发行九项验证

仅在任务涉及平台、工具链、外部账号或发行状态时执行；不适用时明确说明：

1. 官方来源与版本：平台文档、SDK/runtime、工具和引擎是否来自官方来源并绑定访问日和精确版本；无法核实项是否标为 `UNVERIFIED`。
2. 安装包完整性：下载 URL、文件名、字节数、SHA-256 和可用的 Authenticode/平台签名是否记录且复核。
3. 权限与许可：下载、安装、EULA/许可协议、登录/绑定、AppID、设备授权、上传、提审、发布是否分别有授权和执行者。
4. 路径与生命周期：共享工具、安装器、缓存、项目工程和产物是否分离；空间上限、清理、卸载与回滚路径是否明确。
5. 账号与秘密：账号/AppID/团队角色所有者是否明确；任务卡、仓库、日志和截图中是否没有密码、令牌、私钥等秘密。
6. 构建产物：是否生成目标平台要求的独立结构；输入 commit、配置、工具版本、日志、包体和可复现命令是否绑定，Web 壳不得冒充平台产物。
7. runtime 与设备：目标平台客户端、基础库/runtime、设备/OS/GPU、分辨率/DPR、生命周期和性能证据是否形成矩阵；模拟器证据不得冒充真机。
8. 外部阶段状态：本地构建、测试版本、设备可运行、上传成功、审核通过和正式发布是否分别记录且没有越权推进。
9. 内容提交后仍有外部发布时，原任务是否保持active；成功后是否先记录release branch/commit/tag/push再closure归档，失败或冲突是否保持active并记录真实`BLOCKED`，未把内容提交误当任务关闭。
9. 失败恢复：下载损坏、安装失败、资源/网络失败、后台恢复、context loss、版本回退和清理是否有可执行证据或明确后续任务。

## 10. 证伪型检查点

审核报告不能只说“已检查”或“0 问题”，至少包含：

- 枚举/状态/错误码/结构字段的完整清单及定义—消费者对应。
- 跨文档/跨模块引用的实际打开与存在性验证。
- 对潜在冲突的主动搜索，而非只确认新内容存在。
- 每个 Command/State/Event 的生命周期和异常退出。
- 每个关键字段/状态的唯一写入者与负责人。
- 新增同类功能预计需要修改的地方，用于发现分叉和扩展性问题。
- 若某检查点失败，会造成什么用户/系统影响。

## 11. 行为声明一致性

1. 从任务权威文档中提取“必须、应该、触发、写入、读取、中断、顺序、禁止、单一”等可验证行为声明。
2. 用关键类/方法/字段搜索所有包含该行为的有效文档，形成有限清单。
3. 对每条声明回答：是否有实现、行为是否一致、所有条件和退出路径是否完整、是否有直接测试/运行证据。
4. 无实现、实现未记载或文档互相冲突均是偏差，不能用“看起来合理”通过。

声明数量较大时可以拆分审核工作单元，但必须有唯一汇总者和覆盖清单。

## 12. 评审视角

按任务卡从 `PERSPECTIVE_LENSES.md` 选择。视角结论必须有项目证据，不模拟人物口吻。它不替代本清单，也不替代真正独立审核。

## 13. 偏差等级

- 架构性偏差：目标/职责/依赖/所有权/公共契约/行为合同错误。阻塞批准。
- 机械性偏差：遗漏、错误实现、测试缺口、旧概念、文档/代码不一致、编码/链接/格式导致工具或理解错误。阻塞批准。
- 卫生性偏差：不影响当前合同的局部整洁问题。优先当批修复；若延期必须有任务、负责人和触发时机。
- 建议：真实可选优化，不得把架构/机械问题降级包装为建议。

`APPROVED`要求0架构性偏差、0机械性偏差，并明确验证范围、未验证项和残余风险。审核结论不能替代任务owner的范围、Git、阶段或外部权限；Review轮次也不是新增主控审批层。

直接审核闭环中的范围内`CHANGES_REQUESTED`可以按任务卡直接回执行者，但不是新授权。遇到`RANGE_GATE_REQUIRED`、产品/跨域/owner/质量/权限冲突、同一发现复发或轮次停止线时不得继续直返；最终结论和稳定对象必须由审核者直接回唯一owner。

## 14. 审核输出模板

```text
审核任务：<TASK-ID>
审核角色：<分管/独立审核/主控阶段门>
场景与风险：<A/B；轻/中/重；四维理由>
结论：APPROVED / CHANGES_REQUESTED / BLOCKED

发现（按严重度）：
- <文件/位置/证据/影响/修复完成标准>

已执行：
- 输入与所有权：<证据>
- Pre-mortem：<三项及对应检查>
- 方案十二项：<结论指针>
- 文档八维/四层或代码六层：<命令和结果>
- 平台/发行九项：<结论和证据，或不适用原因>
- 行为声明：<覆盖数量和缺口>
- 评审视角：<选用及结论，或未选原因>

未验证与残余风险：
- <内容、原因、负责人/后续任务>

Git 决定：允许/不允许收口；精确路径；指定收口者
恢复证据：FULL_COLD_RECOVERY / WARM_TASK_REBIND；基线、增量读取集、未重复读取对象与升级判断
直接闭环：未授权 / 已授权；当前轮次、停止线检查、执行者唯一Review开始通知与发送后立即停写、实质回复兼作ACK / 条件式ACK例外、最终owner回传
稳定审核对象：<内容对象/section identity；candidate与依赖manifest；验证上限；任务卡可变区>
delta：<内容/依赖/范围/权限/机械/known-exact分类；受影响层；复用批准；fail-closed判断>
```

## 15. 审核失败学习

后续发现问题不自动证明当时审核者失职，但必须回看：当时目标和证据是否已包含该问题、哪个检查点失效、是范围变化还是漏检、应修任务还是修流程。流程改进必须形成新框架版本或项目审核规则，不能只写在聊天里；试点必须在停止线给出`KEEP / ADJUST / REJECT`，不能以“继续观察”代替落实。

## 16. 可选架构健康度趋势

架构一致性、职责、数据流、生命周期、扩展性、可维护性、文档组织和复杂度可以用于同项目的趋势观察，但主观分数不作为批准门，也不跨项目比较。比数字更重要的是列出最大的三个风险及可验证变化。
